--- a/package.json
+++ b/package.json
@@ -21,12 +21,20 @@
   },
   "homepage": "https://github.com/sattu2007/React_basic_To_Advance#readme",
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.12.0",
     "postcss": "^8.4.47",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.25.9",
     "@reduxjs/toolkit": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
